# mlir-test

./: .gitignore  CMakeLists.txt  README.md  library.cpp  library.h  main.cpp  mlir-opt-help.txt
include/Dialect/: CMakeLists.txt
include/Dialect/Kestrel/TransformOps/: BufferizableOpInterfaceImpl.h  CMakeLists.txt  KestrelOps.h  KestrelOps.td  KestrelTransformOps.h  KestrelTransformOps.td  Passes.h  Passes.td  common.h
lib/: CMakeLists.txt
lib/Dialect/Kestrel/: CMakeLists.txt
lib/Dialect/Kestrel/TransformOps/: BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  ConvertLinalgToAice.cpp  KestrelOps.cpp  KestrelTransformOps.cpp  PostProcessAfterBufferization.cpp
lib/kestrel-opt/: CMakeLists.txt  kestrel-opt.cpp
python/: basic_test.py
test/examples/mlir-opt/: gemm_relu.mlir  gemm_relu_tiled.mlir  transform-bufferize-dma.mlir  transform-bufferize-kestrel-dma.mlir  transform-fused-kestrel-dma-2.mlir  transform-fused-kestrel-dma.mlir  transform-gpu-launch-kestrel.mlir  transform-tile-and-fuse.mlir  transform-vectorize-multiple-for.mlir  transform-vectorize-tiled-add.mlir
test/examples/unit-test/: matmul_128_8192.mlir  matmul_128_8192_gpu.mlir  matmul_play.mlir
tools/: search_symbol.sh
